<resources>
    <string name="app_name">HayatWallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="landing_page_logo">Landing Page Logo</string>
    <string name="welcome_message_for_landing_page">Welcome Message For Landing Page</string>
    <string name="welcomeHeader1"> <b>Finans\'</b>a</string>
    <string name="welcomeHeader2">Hoşgeldiniz</string>
    <string name="description">X Dakikada birbirimizi tanıyıp Hayat Finans dünyasının müşterisi olabilirsiniz.</string>
    <string name="ButttonForLogInPage">Müşteri Olmak İstiyorum</string>
    <string name="hintForTC">Müşteri No / TCKN</string>
    <string name="passwordHint">Şifre</string>
    <string name="Login">Giriş Yap</string>
    <string name="ForgetPassword"> Şifremi Unuttum / Anında Şifre</string>
    <string name="SimBloke"> SIM Bloke Kaldır</string>
    <string name="kampanyalar">Kampanyalar</string>
    <string name="profil">Profil</string>
    <string name="ana_sayfa">Ana Sayfa</string>
    <string name="detaylar">Detaylar</string>
    <string name="t_rk_liras">Türk Lirası</string>
    <string name="Balance">6,000</string>
    <string name="addMoney">Para Yatır</string>
    <string name="sent">Para Gönder</string>
    <string name="optionsmore">...</string>
    <string name="RecyclerTitleText">Hesap Geçmişi</string>
    <string name="ExpandRecyclerText">Hepsini Gör</string>


</resources>