<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scenes.LandingFragment"
    android:background="@color/landingPageBackgroundEdgeColor"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/ForwardButton"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="90dp"
            app:backgroundTint="@null"
            android:background="@drawable/btn1"
            android:text="@string/ButttonForLogInPage"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.474"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WelcomeMesageBody" />

        <TextView
            android:id="@+id/WelcomeMesageBody"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="52dp"
            android:text="@string/description"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/WelcomeText2"
            app:layout_constraintTop_toBottomOf="@+id/WelcomeText2" />


        <ImageView
            android:id="@+id/LandingLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/landing_page_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_welcome"
            tools:src="@tools:sample/avatars"
            tools:srcCompat="@drawable/img_welcome" />

        <TextView
            android:id="@+id/welcomeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/welcome_message_for_landing_page"
            android:text="Hayat Finans'a"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.121"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LandingLogo"
            app:layout_constraintVertical_bias="0.017" />

        <TextView
            android:id="@+id/WelcomeText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hoşgeldiniz!"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeHeader"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button2"
            android:layout_width="280dp"
            android:layout_height="60dp"
            app:backgroundTint="@null"
            android:background="@drawable/btn2"
            android:text="Müşteriyim"
            android:textColor="#050505"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ForwardButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>